cover letter updates -- ready for you to submit once you look it over. if your changes are only minor, no need for me to look at the article or cover letter again.

--- a/Manuscripts/cog-psych/cover-letter.tex
+++ b/Manuscripts/cog-psych/cover-letter.tex
@@ -1,26 +1,39 @@
-%!TEX output_directory = latex_out/
+\documentclass{letter}
 
-\documentclass[12pt]{article}
+\setlength{\topmargin}{-0.8in}
+\setlength{\textheight}{8in}
+\setlength{\oddsidemargin}{0.2in}
+\setlength{\textwidth}{6.1in}
+
 \usepackage[letterpaper, margin=1in, headheight=15pt]{geometry}
 
 \setlength{\parindent}{0em}
 \setlength{\parskip}{1em}
 
+\address{Joseph L. Austerweil \\ Department of Psychology \\ University of Wisconsin - Madison \\ 1202 West Johnson Street,\\ Madison, WI 53706.\\ E-mail: austerweil@wisc.edu}
+
+\signature{Joseph L. Austerweil \\ Assistant Professor of Psychology and Computer Science (affiliate) \\ University of Wisconsin - Madison}
+
 
 \begin{document}
+\date{June 17 2017}
+\begin{letter}{Dr. Gordon Logan \\ Editor \\ {\em Cognitive Psychology}}
 
-We are pleased to submit to {\em Cognitive Psychology} a manuscript entitled ``Creating Something Different: Similarity and Contrast in Concept Generation.''
+\vspace{30mm}
 
-The manuscript reports two experiments and formal modeling on the topic of category generation. Previous work on the topic has not considered the integral role of contrast in ensuring generated categories differ from what is already known. Our behavioral experiments demonstrate such an influence, and our modeling efforts show that a novel exemplar-based approach (based on the Generalized Context Model) can explain the influence of category contrast in the generation process. 
+\opening{Dear Dr. Logan,}
 
-We expect that a broad range of readers will find our results noteworthy and compelling.  The work reported in the manuscript has not been submitted for journal publication. A previous version of this work is to appear in the Proceedings of the Thirty-Ninth Annual Conference of the Cognitive Science Society (Conaway \& Austerweil, 2017).
 
-Thank you for considering our work for publication. Correspondence regarding the manuscript may be addressed to:
+Nolan Conaway, Kenneth Kurtz, and I are pleased to submit to {\em Cognitive Psychology} a manuscript entitled ``Creating Something Different: Similarity and Contrast in Concept Generation.''
 
-Joseph L. Austerweil \\
-1202 West Johnson Street,\\ 
-Madison, WI 53706.\\
-E-mail: austerweil@wisc.edu
+The manuscript proposes and investigates a novel principle underlying how people generate categories: contrast (being different from other relevant categories). To formulate the principle formally, we present a novel exemplar-based approach (based on the Generalized Context Model) and test its predictions of how contrast should influence category generation in two experiments. Previous work on the topic has not considered the fundamental role of contrast in ensuring generated categories differ from what is already known. This includes an article recently published in {\em Cognitive Psychology} by Alan Jern and Charles Kemp, entitled "A Probabilistic Account of exemplar and category generation". Our behavioral experiments demonstrate such an influence, and our modeling efforts show that a novel exemplar-based approach (based on the Generalized Context Model) can explain the influence of category contrast in the generation process. We demonstrate that previous models of category generation are not influenced by contrast and are unable to account for the results of our experiments.
 
+Creating new categories is a fundamental task tackled by thinking. Yet, outside of the previously mentioned article, there are no formal investigations of the topic. Further, to the best of our knowledge, we are the first authors to propose and explore the importance of contrast in category generation. These are novel theoretical, computational, and empirical advances that have important implications for researchers studying human thinking. Thus, we expect that a broad range of {\em Cognitive Psychology} readers will find our manuscript relevant. The work reported in the manuscript has not been submitted for journal publication. A previous version of this work is to appear in the Proceedings of the Thirty-Ninth Annual Conference of the Cognitive Science Society (Conaway \& Austerweil, 2017).
+
+Given his expertise in thinking and categorization, we recommend Associate Editor {\em Art Markman} as the action editor for the manuscript. Thank you for considering our work for publication. Correspondence regarding the manuscript may be addressed to Joseph L. Austerweil whose contact information is above.
+
+\closing{Yours sincerely,}
+
+\end{letter}
 
 \end{document}
