checked over the cover letter (_very_ fancy)

--- a/Manuscripts/cog-psych/cover-letter.tex
+++ b/Manuscripts/cog-psych/cover-letter.tex
@@ -1,3 +1,5 @@
+%!TEX output_directory = latex_out/
+
 \documentclass{letter}
 
 \setlength{\topmargin}{-0.8in}
@@ -26,7 +28,9 @@
 
 Nolan Conaway, Kenneth Kurtz, and I are pleased to submit to {\em Cognitive Psychology} a manuscript entitled ``Creating Something Different: Similarity and Contrast in Concept Generation.''
 
-The manuscript proposes and investigates a novel principle underlying how people generate categories: contrast (being different from other relevant categories). To formulate the principle formally, we present a novel exemplar-based approach (based on the Generalized Context Model) and test its predictions of how contrast should influence category generation in two experiments. Previous work on the topic has not considered the fundamental role of contrast in ensuring generated categories differ from what is already known. This includes an article recently published in {\em Cognitive Psychology} by Alan Jern and Charles Kemp, entitled "A Probabilistic Account of exemplar and category generation". Our behavioral experiments demonstrate such an influence, and our modeling efforts show that a novel exemplar-based approach (based on the Generalized Context Model) can explain the influence of category contrast in the generation process. We demonstrate that previous models of category generation are not influenced by contrast and are unable to account for the results of our experiments.
+The manuscript proposes and investigates a novel principle underlying how people generate novel concepts: contrast (being different from other relevant categories). To formulate the principle mathematically, we present a novel exemplar-based approach (based on the Generalized Context Model) and test its predictions regarding how contrast should influence category generation in two experiments. Previous work on the topic has not considered the fundamental role of contrast in ensuring generated categories differ from what is already known. This includes an article recently published in {\em Cognitive Psychology} by Alan Jern and Charles Kemp, entitled ``A Probabilistic Account of exemplar and category generation.'' 
+
+Our behavioral experiments demonstrate such an influence, and our modeling efforts show that our novel exemplar-based approach can explain the influence of category contrast in the generation process. We demonstrate that previous models of category generation are not influenced by contrast and are unable to account for the results of our experiments.
 
 Creating new categories is a fundamental task tackled by thinking. Yet, outside of the previously mentioned article, there are no formal investigations of the topic. Further, to the best of our knowledge, we are the first authors to propose and explore the importance of contrast in category generation. These are novel theoretical, computational, and empirical advances that have important implications for researchers studying human thinking. Thus, we expect that a broad range of {\em Cognitive Psychology} readers will find our manuscript relevant. The work reported in the manuscript has not been submitted for journal publication. A previous version of this work is to appear in the Proceedings of the Thirty-Ninth Annual Conference of the Cognitive Science Society (Conaway \& Austerweil, 2017).
 
