submitted this bad boy

--- a/Manuscripts/cog-psych/cogpsych.tex
+++ b/Manuscripts/cog-psych/cogpsych.tex
@@ -32,10 +32,6 @@
 \fancyhead[R]{\thepage}
 
 
-% author info:
-% https://www.elsevier.com/journals/cognitive-psychology/0010-0285/guide-for-authors
-
-
 \begin{document}
 
 % ------- TITLE PAGE ------- %
@@ -75,7 +71,7 @@ E-mail: austerweil@wisc.edu
 The ability to creatively generate new concepts and ideas is among the most fascinating aspects of human cognition, but we do not have a strong understanding of the cognitive processes and representations underlying concept generation. In this paper, we study the generation of new categories using the computational and behavioral toolkit of traditional artificial category learning. Previous work in this domain has focused on how the statistical structure of known categories generalizes to generated categories, overlooking the degree of contrast between the known and generated categories as a factor. We report two experiments demonstrating that contrast between what is known and what is created is of fundamental importance for categorization and the creative process. We propose a novel, exemplar-based approach explaining our results, and compare the model's performance to two key alternatives. Our experiments and simulations demonstrate specifically how category contrast influences creative generation, and how it can interact with other constraints to produce different types of creations. Our work also serves as a concrete example of how well-established and highly controlled experimental frameworks (such as those in the field of category learning) can be used to make progress in an intriguing yet understudied domain.
 
 \setlength\parindent{0.5in}
-{\em Keywords}: categorization, concepts, creativity, generation, computational modeling, exemplar models
+{\em Keywords}: categorization; concepts; creativity; generation; computational modeling; exemplar models
 \clearpage
 
 
