Cleaned up error scatterplot generation.

--- a/Manuscripts/cog-psych/revision/methods_results_e3.tex
+++ b/Manuscripts/cog-psych/revision/methods_results_e3.tex
@@ -24,7 +24,8 @@ Feedback was automatically displayed for 2500 ms after each response.
 Overall accuracy of the participants was high, with a mean error rate of $.19$
 ($SD = .19$). 
 
-[Place error curve plots here, not unlike what NGPMG1994 has done]
+[Place error curve plots here, not unlike what NGPMG1994 has done. This is
+already plotted - check the cat-assign/analysis directory]
 
 [Move on to modelling analyses. Include correlation plots, don't worry about
 individual fits. Also include the varying of PACKER's performance (and maybe
