Working on fitting models to maximise correlations, but is slow. Unfeasible with multiple models. Somewhat optimised code still takes ages - I think I will need to restructure the script completely.

--- a/Manuscripts/cog-psych/revision/cogpsych.tex
+++ b/Manuscripts/cog-psych/revision/cogpsych.tex
@@ -518,6 +518,7 @@ Each model was used to simulate each participant's generation independently, wit
 
 As in the more traditional model evaluation analysis described above, PACKER provided a much closer match to our behavioral results than the copy-and-tweak and hierarchical Bayesian models. In all conditions, PACKER distributes categories similarly to the behavioral data: Horizontally-aligned categories tend to be placed above and below members of the experimenter-defined category, and vertically-aligned categories tend to be placed to the sides. Conversely, because the copy-and-tweak and hierarchical Bayesian models are insensitive to category contrast, these models do not produce any systematic patterns of association between category location and distributional structure. The sole exception is within the `Row' condition of Experiment 1, in which the majority of participants generated a `Row'-like category, widely distributed along the X-axis but not the Y-axis. In these cases, both models are initialized with weights that produce Row categories, but because category contrast is not considered, categories are uniformly generated across the entire domain, rather than concentrated within the upper-regions as observed behaviorally.
 
+\include{methods_results_e3}
 
 \section{General Discussion}
 
