start at reworking intro. will continue to work on it soon.

--- a/Manuscripts/cog-psych/revision/citations.bib
+++ b/Manuscripts/cog-psych/revision/citations.bib
@@ -19,6 +19,36 @@
   year = {1950}
 }
 
+@article{lehman2011,
+	author = {J. Lehman and K. O. Stanley},
+	title = {Abandoning objectives: {E}volution through the search for novelty alone},
+	journal = {Evolutionary computation},
+	volume = {19},
+	number = {2},
+	year = {2011},
+	pages = {189-223}
+}
+
+@article{taylor2016,
+	author = {T. Taylor and M. Bedau and A. Channon and D. Ackley and W. Banzhaf and G. Beston and T. Froese and S. Hickinbotham and T. Ikegami and B. Mc{M}ullin},
+	title = {Open-Ended Evolution: Perspectives from the {OEE} Workshop in {Y}ork},
+	journal = {Artificial Life},
+	volume = {22},
+	number = {3},
+	year = {2016},
+	pages = {408--423}
+}
+
+@article{lake2017,
+	author = {B. M. Lake and T. D. Ullman and J. B. Tenenbaum and S. J. Gershman},
+	title = {Building machines that learn and think like people},
+	journal = {Behavioral and Brain Sciences},
+	volume = {40},
+	pages = {E253},
+	year = {2017}
+}
+
+
 @article{ashby1994categorization,
   title={Categorization response time with multidimensional stimuli},
   author={Ashby, F Gregory and Boynton, Geoffrey and Lee, W William},
