--- a/Manuscripts/cog-psych/revision/cogpsych.tex
+++ b/Manuscripts/cog-psych/revision/cogpsych.tex
@@ -28,7 +28,7 @@
 \pagestyle{fancy}
 \fancyhf{} % sets both header and footer to nothing
 \renewcommand{\headrulewidth}{0pt}
-\lhead{RUNNING HEAD: Similarity and Contrast in Concept Generation}
+\lhead{RUNNING HEAD: Similarity, Contrast, and Representativeness in Categorization}
 \fancyhead[R]{\thepage}
 
 
@@ -39,14 +39,15 @@
 \hfill
 \\[1in]
 
-Creating Something Different: Similarity and Contrast in Concept Generation
+Creating and Learning Something Different: \\
+Similarity, Contrast, and Representativeness in Categorization
 
 
 \vfill
-
+Joseph L. Austerweil\textsuperscript{1}
 Nolan Conaway\textsuperscript{1}, 
-Kenneth J. Kurtz\textsuperscript{2}, 
-and Joseph L. Austerweil\textsuperscript{1}
+Shi X. Liew\textsuperscript{1},
+and Kenneth J. Kurtz\textsuperscript{2}
 \\[\baselineskip]
 \textsuperscript{1}Department of Psychology, University of Wisconsin-Madison, Madison, WI, USA
 \textsuperscript{2}Department of Psychology, Binghamton University, Binghamton, NY, USA
@@ -75,25 +76,28 @@ The ability to creatively generate new concepts and ideas is among the most fasc
 \clearpage
 
 
+% % OLD OLD INTRO:
+% Creativity, innovation, imagination, and the creation of new ideas are among the most fascinating, important and difficult human capabilities to study. They are fascinating and important capabilities because they have produced some of the greatest scientific breakthroughs that revolutionized the world. Unfortunately, technological and scientific breakthroughs are rare and the result of a great deal of cognitive effort, which makes it difficult to investigate the underlying cognitive representations and processes responsible for them using standard experimental methodology or to formalize them in computational models. Although we tend to focus on the most salient products of these processes (e.g., scientific breakthroughs), every person is likely to have generated many novel sentences, thoughts, and/or drawings given the combinatorial explosion of possible statements given a reasonably-sized set of primitive elements and combination rules in language, thought, and perception \citep{goldstone2003}. This observation provides a fantastic opportunity: By examining how people create new concepts in a domain amenable to formalizing in computational models, we can investigate (some aspects of) creativity, innovation, and imagination scientifically.
+
+% Towards the aim of providing a formal account of the cognitive mechanisms involved in creativity and innovation, we explore a form of creative cognition that can be studied using standard behavioral methodology and is amenable to formal modeling: category generation. In a category generation task, participants are given some background knowledge about a domain (a cover story and/or learning one or more categories in the domain) and then are asked to generate another category in the domain. Unlike creativity and innovation, categorization is well studied from a breadth of perspectives, including behavioral, neural, comparative, and computational  \citep{kurtz2015human,mack2013,margolis2015,pothoswills2011}. By analyzing a creative task using formal tools from the categorization literature, we can formalize some theories of creativity and test them empirically in a more rigorous manner. 
+
+%cut from submission intro:
+
+%Yet, it is also one of the most difficult human capabilities to study.  We tend to focus on the most salient products of conceptual generation (e.g., scientific breakthroughs), but every person is likely to have generated many novel concepts in ordinary life. Indeed, the generation of novel sentences, works of art, and so on may also be considered products of our capacity to create new concepts. However, while this capacity is of great interest, it is also highly complex, making it difficult to study in a typical laboratory setting. By consequence, we do not have a strong understanding of the representations and processes involved in the generation of new concepts.
+
+%Questions concerning the generation of novel concepts are typically addressed within research on creativity, a tremendously diverse field employing a multitude of experimental and theoretical approaches \citep[see][]{kaufman2010handbook}. The processes underlying conceptual generation are commonly investigated using the creative cognition approach \citep{finke1992creative, smith1995creative}, in which the products of creative acts (such as drawings) are analyzed to obtain insights into how they might have been created. These approaches have made great advances in our understanding of creativity, but the focus on particular types of creative products such as drawings makes it difficult to formalize the proposed processes and representations within a computational modeling framework. As a consequence, this approach does not often employ computational models to provide formal tests of competing theories. 
+
 % ------- BEGIN! ------- %
 \begin{flushleft}
 
 \section{Introduction}
 \setlength\parindent{0.5in}
 
+Creating and learning new ideas is one of the most fascinating and important human capabilities. For example, cell phones and smart phones are newly created categories of objects that young and old adults learned and have become reliant on in the last few decades. In fact, computational reearchers have identified generating novel objects and objectives as one of the defining, and most difficult to formalize, characteristics of intelligent life \citep{lake2017,lehman2011,taylor2016}. Yet, the cognitive mechanisms that enable people to innovate and learn new innovations are not well understood and are understudied by scientists. In part, this is due to the inherent difficulty of designing and conducting experiments that test these capabilities. How would a scientist devise an experiment that induces a participant to create and learn new categories that are as interesting as cell phones and smart phones? In this article, we investigate the prior expectations people use to learn and generate new categories using computational models and behavioral experiments.
 
-The creation of new ideas is one of the most fascinating and important human capabilities. Yet, it is also one of the most difficult human capabilities to study.  We tend to focus on the most salient products of conceptual generation (e.g., scientific breakthroughs), but every person is likely to have generated many novel concepts in ordinary life. Indeed, the generation of novel sentences, works of art, and so on may also be considered products of our capacity to create new concepts. However, while this capacity is of great interest, it is also highly complex, making it difficult to study in a typical laboratory setting. By consequence, we do not have a strong understanding of the representations and processes involved in the generation of new concepts.
+Generating and learning new concepts are, however, not altogether different from the types of behaviors typically studied in cognitive psychology laboratories. In particular, generating a member of a novel class can be considered a `special case' application of existing category knowledge \citep{kemp2014taxonomy,kurtz2015human}. Research in categorization typically focuses on what properties of a category affect the classification of an object's category given its features \citep{shepard1961learning,kurtz2013human}, and the prediction of an object's unobserved features given some of its other features and/or its category \citep{markman2003category}. The generation of members of a new category consists of inferring {\em all} features for a {\em novel} category label. Thus, we can make progress formalizing the processes involved in creative generation by extending theories of categorization to this special case. Then, we can examine what factors of the generated categories affect the ease at which people learn the category.
 
-Questions concerning the generation of novel concepts are typically addressed within research on creativity, a tremendously diverse field employing a multitude of experimental and theoretical approaches \citep[see][]{kaufman2010handbook}. The processes underlying conceptual generation are commonly investigated using the creative cognition approach \citep{finke1992creative, smith1995creative}, in which the products of creative acts (such as drawings) are analyzed to obtain insights into how they might have been created. These approaches have made great advances in our understanding of creativity, but the focus on particular types of creative products such as drawings makes it difficult to formalize the proposed processes and representations within a computational modeling framework. As a consequence, this approach does not often employ computational models to provide formal tests of competing theories. 
-
-The act of generating a new concept is, however, not altogether different from the types of behaviors typically studied in cognitive psychology laboratories. In particular, generating a member of a novel class can be considered a `special case' application of existing category knowledge \citep{kemp2014taxonomy,kurtz2015human}. Research in categorization typically focuses on classification \citep[predicting an object's category given its features;][]{shepard1961learning,kurtz2013human} and inference \citep[predicting an object's unobserved features given observed features and a category label, see e.g.,][]{markman2003category}. The generation of members of a new category consists of inferring {\em all} features for a {\em novel} category label. Thus, we can make progress formalizing the processes involved in creative generation by extending theories of categorization to the special case.
-
-% % OLD INTRO:
-% Creativity, innovation, imagination, and the creation of new ideas are among the most fascinating, important and difficult human capabilities to study. They are fascinating and important capabilities because they have produced some of the greatest scientific breakthroughs that revolutionized the world. Unfortunately, technological and scientific breakthroughs are rare and the result of a great deal of cognitive effort, which makes it difficult to investigate the underlying cognitive representations and processes responsible for them using standard experimental methodology or to formalize them in computational models. Although we tend to focus on the most salient products of these processes (e.g., scientific breakthroughs), every person is likely to have generated many novel sentences, thoughts, and/or drawings given the combinatorial explosion of possible statements given a reasonably-sized set of primitive elements and combination rules in language, thought, and perception \citep{goldstone2003}. This observation provides a fantastic opportunity: By examining how people create new concepts in a domain amenable to formalizing in computational models, we can investigate (some aspects of) creativity, innovation, and imagination scientifically.
-
-% Towards the aim of providing a formal account of the cognitive mechanisms involved in creativity and innovation, we explore a form of creative cognition that can be studied using standard behavioral methodology and is amenable to formal modeling: category generation. In a category generation task, participants are given some background knowledge about a domain (a cover story and/or learning one or more categories in the domain) and then are asked to generate another category in the domain. Unlike creativity and innovation, categorization is well studied from a breadth of perspectives, including behavioral, neural, comparative, and computational  \citep{kurtz2015human,mack2013,margolis2015,pothoswills2011}. By analyzing a creative task using formal tools from the categorization literature, we can formalize some theories of creativity and test them empirically in a more rigorous manner. 
-
-Previous work in categorization has established that people are highly sensitive to the structural properties of categories, such as correlations between the features of category members and the relation between items within the same category and those in different categories \citep{roschmervis1975,regier2007,shepard1961learning}. Inspired by this work, previous research on the topic of category generation has explored a similar principle: People tend to create new categories that have similar {\em statistical regularities} as previously learned categories \citep{jern2013probabilistic,ward1994structured}. Although this is an important characteristic of generating new categories, it cannot be the only one. Taken to the extreme, the best ``new'' category in terms of having the same statistical regularities to other categories would be identical to a known category that is representative of the domain (and thus, not new at all). 
+Previous work in category learning and generation has established that people are highly sensitive to the structural properties of categories, such as correlations between the features of category members and the relation between items within the same category and those in different categories \citep{roschmervis1975,regier2007,shepard1961learning,smith1995}. Inspired by this work, previous research on the topic of category generation has explored a similar principle: People tend to create new categories that have similar {\em statistical regularities} as previously learned categories \citep{jern2013probabilistic,ward1994structured}. Although this is an important characteristic of generating new categories, it cannot be the only one. Taken to the extreme, the best ``new'' category in terms of having the same statistical regularities to other categories would be identical to a known category that is representative of the domain (and thus, not new at all). 
 
 To successfully generate something novel, what is generated must be different from what is already known. This fundamental constraint, ``being different'', or contrasting from other categories in the relevant domain, is the focus of our work. Although implicitly assumed in some work, this constraint has been overlooked in previous research: To our knowledge, there has not been any systematic investigation addressing how generated categories {\em differ} from what is already known. Although the idea of category contrast is ubiquitous throughout the categorization literature, and extends to a variety of other fields \citep[e.g., color;][]{regier2007}, the idea that a new category should be ``different'' is vague, as there are many ways it could be different from a previously observed category. Building on the largely successful exemplar modeling framework \citep{medin1978context,nosofsky1984choice,nosofsky1986attention}, we propose a novel exemplar model of category generation, {\em Producing Alike and Contrasting Knowledge using Exemplar Representations} (PACKER), formalizing how new categories should differ from previous categories. This model makes novel predictions about how contrast affects category generation, which we test using behavioral experiments.
 
