Likelihood ratio tests for correlation might not be appropriate. Until I find a better solution, run bootstraps first.

--- a/Manuscripts/cog-psych/revision/methods_results_e3.tex
+++ b/Manuscripts/cog-psych/revision/methods_results_e3.tex
@@ -11,10 +11,8 @@ it should be fairly straightforward for me to churn out one anyway.]
 \subsection{Participants, Materials, and Procedure}
 
 Experiment 2 recruited 122 participants who each generated one set of four Alpha
-and four Beta category exemplars. Among these 122 generated category sets were
-102 unique sets (i.e., they contained a unique collection of Alpha and Beta
-exemplars). Consequently, for Experiment 3, we recruited 102 participants with
-one participant presented with a different unique category set.
+and four Beta category exemplars. Experiment 3 recruited the same number of
+participants. 
 
 Participants observed four blocks of eight trials. Each trial began with the
 presentation of a fixation cross for 500 ms. This was followed by the
@@ -25,9 +23,14 @@ Feedback was automatically displayed for 2500 ms after each response.
 
 \subsection{Results}
 
+Among the 122 originally generated category sets were 102 unique sets (i.e.,
+they contained a unique collection of Alpha and Beta exemplars). Consequently,
+for our subsequent analyses for this experiment we only use data from the first
+102 participants that were presented with a unique category set.
+
 Overall accuracy of the participants was high, with a mean error rate of $.19$
-($SD = .19$). Error rates for each block are presented in Figure
-\ref{fig:learningcurve}. 
+($SD = .19$; min max?). Error rates for each block are presented in Figure
+\ref{fig:learningcurve}.
 
 \begin{figure}
     \begin{center}
